# claimcheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  extractor.rs  git.rs  lockfile.rs  main.rs  parser.rs  reporter.rs  scorer.rs  types.rs  verifier.rs
tests/: integration.rs
tests/fixtures/: fail.jsonl  pass.jsonl  unverifiable.jsonl
