[package]
name = "claimcheck"
version = "0.1.0"
edition = "2021"
description = "Verify AI agent claims from session transcripts"
license = "MIT"
repository = "https://github.com/ojuschugh1/claimcheck"
readme = "README.md"
keywords = ["ai", "verification", "cli", "transcript", "testing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "claimcheck"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
anyhow = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
